# GameServerDs

./: CMakeLists.txt  create_server.sh
BattleServer/src/: BattleServer.cpp  BattleServer.h  main.cpp
BattleServer/src/ClientService/: ClientService.cpp  ClientService.h
BattleServer/src/RoomService/: RoomService.cpp  RoomService.h
BattleServer/src/model/: PlayerManager.cpp  PlayerManager.h  typedef.h
BattleServer/src/model/Game/: Game.cpp  Game.h  GameConfig.cpp  GameConfig.hpp  GameManager.cpp  GameManager.h  Player.cpp  Player.h
BattleServer/src/model/Game/Event/: GameEvent.cpp  GameEvent.h
BattleServer/src/model/Game/Task/: Mission.cpp  Mission.h  MissionConfig.cpp  MissionConfig.h
BattleServer/src/model/Game/Title/: Title.cpp  Title.h  TitleConfig.cpp  TitleConfig.h
DBServer/config/: config.json
DBServer/src/: DBServer.cpp  DBServer.h  main.cpp
DBServer/src/DBHandle/: dbHandle.cpp  dbHandle.h
DBServer/src/GateService/: gateService.cpp  gateService.h
GameServer/config/: config.json
GameServer/src/: GameServer.cpp  GameServer.h  main.cpp
GameServer/src/DBHandle/: dbHandle.cpp  dbHandle.h
GameServer/src/GateService/: GateService.cpp  GateService.h
GameServer/src/NodeService/: NodeService.cpp  NodeService.h
GameServer/src/model/: GameConnectionManager.cpp  GameConnectionManager.h  typedef.h
GameServer/src/model/User/: User.cpp  User.h  UserManager.cpp  UserManager.h
LoginServer/src/: LoginServer.cpp  LoginServer.h  main.cpp
LoginServer/src/DBService/: DBService.cpp  DBService.h
LoginServer/src/GateService/: GateService.cpp  GateService.h
LoginServer/src/model/: structDef.h
NodeServer/src/: NodeServer.cpp  NodeServer.h  main.cpp
NodeServer/src/DbHandle/: DbHandle.cpp  DbHandle.h
NodeServer/src/GameService/: GameService.cpp  GameService.h
NodeServer/src/RoomService/: RoomService.cpp  RoomService.h
NodeServer/src/model/: NodeTypedef.h
RoomServer/src/: RoomServer.cpp  RoomServer.h  main.cpp
RoomServer/src/NodeService/: NodeService.cpp  NodeService.h
RoomServer/src/model/: room_typedef.h
RoomServer/src/model/Room/: Room.cpp  Room.h  RoomManager.cpp  RoomManager.h
RoomServer/src/model/User/: User.cpp  User.h  UserManager.cpp  UserManager.h
common/datahandle/: mysqlPool.cpp  mysqlPool.h  redisPool.cpp  redisPool.h
common/include/: ConfigParser.cpp  ConfigParser.h  ThreadSafeQueue.hpp  buffer.cpp  buffer.h  clock.cpp  clock.h  codec.cpp  codec.h  ikcp.c  ikcp.h  lock.hpp
common/network/: EventCallBack.h  EventManager.cpp  EventManager.h  KcpConectionPacket.cpp  KcpConectionPacket.h  KcpSession.cpp  KcpSession.h  Session.hpp  SessionManager.cpp  SessionManager.h  TcpSession.cpp  TcpSession.h  disPatcher.cpp  disPatcher.h  server.cpp  server.h  type.cpp  type.h
common/protobuf/: BaseType.pb.cc  BaseType.pb.h  CsCmd.pb.cc  CsCmd.pb.h  WorldSnapshot.pb.cc  WorldSnapshot.pb.h  client_battle.pb.cc  client_battle.pb.h  cmdID.pb.cc  cmdID.pb.h  game_node_msg.pb.cc  game_node_msg.pb.h  gate_game_msg.pb.cc  gate_game_msg.pb.h  gate_login_msg.pb.cc  gate_login_msg.pb.h  login_db_msg.pb.cc  login_db_msg.pb.h  node_msg.pb.cc  node_msg.pb.h  node_room_msg.pb.cc  node_room_msg.pb.h  room_battle.pb.cc  room_battle.pb.h  server_connetion.pb.cc  server_connetion.pb.h
gateServer/config/: config.json
gateServer/src/: GateServer.cpp  GateServer.h  main.cpp
gateServer/src/ClientService/: ClientService.cpp  ClientService.h
gateServer/src/GameService/: GameService.cpp  GameService.h
gateServer/src/LoginService/: LoginService.cpp  LoginService.h
gateServer/src/model/: Connection.cpp  Connection.h  ConnectionManager.cpp  ConnectionManager.h  structDef.h
gateServer/src/model/Account/: Account.cpp  Account.h  AccountManager.cpp  AccountManager.h
protobuf/: BaseType.proto  CsCmd.proto  WorldSnapshot.proto  client_battle.proto  cmdID.proto  game_node_msg.proto  gate_game_msg.proto  gate_login_msg.proto  login_db_msg.proto  node_msg.proto  node_room_msg.proto  room_battle.proto  server_connetion.proto
scripts/: user_table.sql
